--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,12 @@
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
+      <artifactId>spring-web</artifactId>
+      <version>5.0.6.RELEASE</version>
+      <!--<scope>test</scope>-->
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
       <artifactId>spring-webmvc</artifactId>
       <version>5.0.6.RELEASE</version>
       <!--<scope>test</scope>-->
